# mark-down-notes

./: .gitignore  README.md  TREE_VIEW_UX.md  UX_REWORK_SUMMARY.md
backend/: .env.example  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_api_integration.py  test_services_layer.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_11_19_0445-4e7e79a1f193_initial_schema.py
backend/src/: main.py
backend/src/api/: dependencies.py  schemas.py
backend/src/api/middleware/: __init__.py  error_handler.py
backend/src/api/routes/: __init__.py  notebooks.py  pages.py  search.py  sections.py  sections_backup.py  tags.py
backend/src/api/static/css/: custom.css  tree-view.css
backend/src/api/templates/: base.html  index.html  index_new.html  index_tree.html
backend/src/core/commands/: base.py  notebook_commands.py  page_commands.py  section_commands.py
backend/src/core/common/: __init__.py  result.py
backend/src/core/domain/: notebook.py  page.py  section.py
backend/src/core/interfaces/: repositories.py
backend/src/core/queries/: base.py  queries.py
backend/src/core/results/: result.py
backend/src/core/services/: create_notebook_service.py  create_page_service.py  create_section_service.py  delete_notebook_service.py  delete_page_service.py  delete_section_service.py  get_notebooks_service.py  get_pages_service.py  get_sections_service.py  reorder_sections_service.py  update_notebook_service.py  update_page_service.py  update_section_service.py
backend/src/infrastructure/config/: database.py  settings.py
(+33 files in other folders)
